Feat/#3 create layout
* feat: markup footer and header

* feat: add basic layot

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,11 @@
 @import 'components/button';
 
+// layout
+@import 'layout/app';
 @import 'layout/footer';
 @import 'layout/header';
+
+// pages
+@import 'pages/cart';
+@import 'pages/products';
+@import 'pages/store';
