Feat/#7 create store components (#7)
* refactor: delete all disable prettier comments

* feat: add create element function

* docs: add ts files for components

* feat: add form panel on the store page

* feat: add buttons to store page

--- a/src/sass/pages/_store.scss
+++ b/src/sass/pages/_store.scss
@@ -2,3 +2,27 @@
   border: 2px solid purple;
   height: 100%;
 }
+
+.store-form {
+  width: 20%;
+}
+
+.categories {
+  border: 1px solid brown;
+  margin: 10px 0;
+  &__input{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.filter {
+    border: 1px solid brown;
+    margin: 10px 0;
+    &__input {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+}
