--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/cards';
+@import 'layout/products';
 
 // pages
 @import 'pages/cart';
