--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,8 @@
 @import 'components/button';
 @import 'components/range';
 @import 'components/card';
+@import 'components/cart-item';
+@import 'components/summary';
 
 // layout
 @import 'layout/app';
