--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -3,14 +3,16 @@
   height: 356px;
   display: flex;
   flex-direction: column;
+
   &__img {
-    width: 100%;
-    height: 90%;
+    max-width: calc(100% - 30%);
   }
+
   &__footer {
     display: flex;
     justify-content: space-between;
   }
+
   &__info {
     display: flex;
     flex-direction: column;
