--- a/src/sass/components/_range.scss
+++ b/src/sass/components/_range.scss
@@ -1,3 +1,97 @@
-.range {
+.slider{
   width: 100%;
+  position: relative;
+  height: 5px;
+  margin: 45px 10px 10px 0;
+}
+
+// .slider>div {
+//   // left: 13px;
+//   // right: 15px;
+//   // height: 5px;
+//   width: 100%;
+// }
+
+.slider>div>[inverse-left] {
+  position: absolute;
+  left: 0;
+  height: 3px;
+  border-radius: 10px;
+  background-color: #CCC;
+}
+
+.slider>div>[inverse-right] {
+  position: absolute;
+  right: 0;
+  height: 3px;
+  border-radius: 10px;
+  background-color: #CCC;
+  margin: 0 7px;
+}
+
+
+.slider>div>[range] {
+  position: absolute;
+  left: 0;
+  height: 3px;
+  border-radius: 14px;
+  background-color: #000;
+}
+
+.slider>div>[thumb] {
+  position: absolute;
+  top: -4px;
+  z-index: 2;
+  height: 10px;
+  width: 10px;
+  text-align: left;
+  margin-left: -7px;
+  cursor: pointer;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+  border-radius: 50%;
+  outline: none;
+}
+
+.slider>input[type=range] {
+  position: absolute;
+  pointer-events: none;
+  z-index: 3;
+  height: 14px;
+  top: -2px;
+  width: 100%;
+  opacity: 0;
+}
+
+
+div.slider>input[type=range]::-webkit-slider-thumb {
+  pointer-events: all;
+  width: 28px;
+  height: 28px;
+  border-radius: 0px;
+  border: 0 none;
+  background: red;
+  -webkit-appearance: none;
+}
+
+
+.slider>div>[sign] {
+  opacity: 1;
+  position: absolute;
+  margin-left: -15px;
+  top: -39px;
+  z-index: 3;
+  color: #000;
+  width: 28px;
+  height: 28px;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.slider>div>[sign]>span {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 28px;
 }
