--- a/src/sass/components/_range.scss
+++ b/src/sass/components/_range.scss
@@ -1,3 +1,11 @@
+.multi-range{
+  &__label{
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+
 input[type=range] {
   box-sizing: border-box;
   appearance: none;
@@ -30,17 +38,6 @@ input[type=range] {
     cursor: pointer;
     appearance: none;
     pointer-events: all;
-    box-shadow: 0 1px 4px 0.5px rgba(0, 0, 0, 0.25);
-
-    &::before {
-      content: ' ';
-      display: block;
-      position: absolute;
-      top: 13px;
-      left: 100%;
-      width: 2000px;
-      height: 0px;
-    }
   }
 }
 
