Feat/15 add products to the cart (#19)
* refactor: add icons and images

* feat: style header, footer and add basic styles

* feat: implement adding products to the cart

* feat: implement products counter in header

* feat: add some styles for cart and shop

* refactor: change add and remove products buttons icons

* refactor: replace innerHTML to textContent in components

Co-authored-by: Arina <akira657@mail.ru>

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,5 +1,30 @@
 .btn {
   display: block;
-  width: 100%;
-  margin: 10px 0;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+
+  &_card {
+    background-color: $color-primary;
+    background-image: url('../assets/icons/cart-btn_ico.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 25px;
+    height: 25px;
+  }
+
+  &_add {
+    background: url('../assets/icons/add-btn_ico.svg') center no-repeat;
+    background-size: contain;
+    width: 18px;
+    height: 22px;
+  }
+
+  &_remove {
+    background: url('../assets/icons/remove-btn_ico.svg') center no-repeat;
+    background-size: contain;
+    width: 18px;
+    height: 22px;
+  }
 }
