--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,16 +1,22 @@
 .card {
-  width: 292px;
-  height: 356px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  height: fit-content;
 
   &__img {
-    max-width: calc(100% - 30%);
+    max-width: 100%;
+    max-height: 80%;
+    object-fit: cover;
+    border-radius: 15px;
+    cursor: pointer;
   }
 
   &__footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 0 5px;
   }
 
   &__info {
