--- a/src/sass/components/_summary.scss
+++ b/src/sass/components/_summary.scss
@@ -1,7 +1,3 @@
 .summary {
-  &__info {
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    border-bottom: solid 1px #000;
-  }
+  &__info {}
 }
