--- a/src/sass/pages/_cart.scss
+++ b/src/sass/pages/_cart.scss
@@ -2,7 +2,8 @@
   height: 100%;
 
   &__items {
-    border-bottom: solid 1px #000;
+    border-bottom: solid 1px $color-border;
+    margin-bottom: 50px;
   }
 
   &__header {
