Fix/15 add products to the cart (#20)
* feat: implement button state change when adding/removing a product in card

* feat: save cart button state in product card on reload

* fix: condition when cart is empty

* feat: implement cart and button states when adding/removing a product in product-details

Co-authored-by: Arina <akira657@mail.ru>

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -4,9 +4,19 @@
   padding: 0;
   cursor: pointer;
 
-  &_card {
+  &_product-add {
     background-color: $color-primary;
-    background-image: url('../assets/icons/cart-btn_ico.svg');
+    background-image: url('../assets/icons/add-product-btn_ico.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 25px;
+    height: 25px;
+  }
+
+  &_product-remove {
+    background-color: $color-primary;
+    background-image: url('../assets/icons/remove-product-btn_ico.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
