feat: add static stock parameters to filters

--- a/src/sass/pages/_store.scss
+++ b/src/sass/pages/_store.scss
@@ -36,8 +36,16 @@
   &__input {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
   }
+
+}
+
+.form__label {
+  display: flex;
+}
+
+.form__stock {
+  margin-left: auto;
 }
 
 .filter {
@@ -46,6 +54,5 @@
   &__input {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
   }
 }
