--- a/src/sass/components/_summary.scss
+++ b/src/sass/components/_summary.scss
@@ -1,3 +1,20 @@
 .summary {
-  &__info {}
+  &__heading {
+    margin-bottom: 15px;
+  }
+
+  &__promo-code {
+    margin-bottom: 40px;
+  }
+
+  &__info {
+    border-bottom: solid 1px $color-border;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+  }
+
+  &__products-text {
+    display: inline-block;
+    margin-bottom: 8px;
+  }
 }
