--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,6 +15,10 @@ body {
   min-height: 100vh;
 }
 
+#app {
+  flex-grow: 1;
+}
+
 h1 {
   @include font($size: 3.2rem, $weight: 200);
   @extend %font-prim;
@@ -22,12 +26,12 @@ h1 {
 }
 
 h2 {
-  @include font();
-  margin: 0;
+  @include font($size: 3rem);
+  margin: 0 0 10px;
 }
 
 h3 {
-  @include font();
+  @include font($size: 2.4rem);
   margin: 0;
 }
 
