--- a/src/sass/components/_cart-item.scss
+++ b/src/sass/components/_cart-item.scss
@@ -27,5 +27,13 @@
     display: flex;
     align-items: center;
     margin-left: auto;
+    justify-content: space-between;
+    width: calc(100% - 94%);
+  }
+}
+
+.number-control {
+  &__btn:hover {
+    background-color: initial;
   }
 }
