--- a/src/sass/pages/_cart.scss
+++ b/src/sass/pages/_cart.scss
@@ -1,11 +1,4 @@
 .cart {
-  height: 100%;
-
-  &__items {
-    border-bottom: solid 1px $color-border;
-    margin-bottom: 50px;
-  }
-
   &__header {
     margin-bottom: 55px;
   }
@@ -14,11 +7,18 @@
     margin: 0 35px 80px;
   }
 
+  &__content {
+    background-color: $color-cart-bg;
+    border-radius: 15px;
+    margin-bottom: 80px;
+  }
+
   &__footer {
     display: flex;
-    max-width: calc(100% - 90%);
     align-items: center;
-    margin-left: auto;
+    border-top: solid 1px $color-border;
+    padding: 30px 80px;
+    justify-content: end;
   }
 
   &__page-number {
@@ -27,5 +27,6 @@
 
   &__summary {
     max-width: calc(100% - 75%);
+    margin-bottom: 100px;
   }
 }
