feat: implement promo code block

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -49,4 +49,10 @@
     width: 18px;
     height: 22px;
   }
+
+  &_remove-promo {
+    width: 35%;
+    padding: 10px 0;
+    border-radius: 5px;
+  }
 }
