feat: add breadcrumps

--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -62,3 +62,12 @@
     gap: 15px;
   }
 }
+
+.breadcrumps.wrapper {
+  margin: 0 auto 25px;
+  font-family: Lora;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 25px;
+  color: #161412;
+}
