feat: create modal popup

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'components/summary';
 @import 'components/product';
 @import 'components/promo-code';
+@import 'components/modal';
 
 @import 'layout/columns';
 @import 'layout/wrapper';
