--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -36,7 +36,7 @@
 
 }
 
-.card {
+.credit-card {
   margin: auto;
   padding: 26px 20px;
   background: #161412;
@@ -60,7 +60,7 @@
     height: 15px;
   }
 
-  &__number{
+  &__number {
     margin-bottom: 34px;
     width: 60%;
   }
@@ -72,7 +72,8 @@
     border-radius: 15px;
     height: 32px;
     color: black;
-    &::placeholder{
+
+    &::placeholder {
       color: black;
     }
   }
@@ -90,6 +91,7 @@
     align-items: center;
     font-size: 20px;
     font-weight: 400;
+
     .card__input {
       width: 86px;
     }
@@ -102,6 +104,7 @@
     justify-content: space-between;
     font-size: 20px;
     font-weight: 400;
+
     .card__input {
       width: 86px;
     }
