Feat/33 implement modal (#28)
* feat: implement close and open modal

* feat: implement validation and confirm order

* feat: style inputs and change some styles

* feat: remove lock class from body when redirecting to store

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -4,7 +4,8 @@ $color-cart-bg: #F8F8F8;
 $color-border: #BEBEBE;
 $color-light: #FFFFFF;
 $color-dark: #65635F;
-$color-checkbox-checked: #2F492C;
 $color-hovered: #72508C;
+$color-error: #e52a2a;
+$color-modal-bg: rgba(101, 99, 95, 0.25);
 
 $content-width: 1160px;
