--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 @import 'components/product';
 @import 'components/promo-code';
 @import 'components/modal';
+@import 'components/credit-card';
 
 @import 'layout/columns';
 @import 'layout/wrapper';
