--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -9,4 +9,53 @@
   &:focus {
     outline: none;
   }
+
+  &_search {
+    &::-webkit-search-cancel-button {
+      -webkit-appearance: none;
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      background: url('../assets/icons/cross_ico.svg') center no-repeat;
+      background-size: contain;
+      cursor: pointer;
+    }
+  }
+
+  &_modal {
+    width: 100%;
+  }
+
+  &_credit-card {
+    width: calc(100% - 38%);
+  }
+}
+
+.checkbox {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 5px 0 0;
+  color: $color-primary;
+  width: 15px;
+  height: 15px;
+  border: 1px solid $color-primary;
+  border-radius: 2px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 11px;
+    height: 11px;
+    top: -50%;
+    left: -50%;
+    transform: scale(0) translate(70%, 70%);
+    border-radius: 1px;
+    transition: 0.3s all ease-in-out;
+  }
+
+  &:checked::before {
+    transform: scale(1) translate(70%, 70%);
+    background-color: $color-hovered;
+  }
 }
