--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,117 +1,57 @@
 .modal {
-  position: absolute;
-  background-color: white;
-  padding: 37px 147px;
-  border: none;
-  border-radius: 15px;
+  z-index: 99;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: $color-modal-bg;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  &__heading {
-    margin: 0 auto 20px;
-    width: 200px;
-
+  .active {
+    visibility: visible;
   }
 
-  &__inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-    margin-bottom: 51px;
-    align-items: center;
-  }
-
-  &__input {
-    width: 350px;
-    height: 51px;
+  &-content {
+    position: absolute;
+    width: fit-content;
+    background-color: $color-light;
+    padding: 20px 40px;
     border: none;
-    font-style: italic;
-    text-align: center;
-    background: #F4F4F2;
     border-radius: 15px;
-  }
 
-  &__btn {
-    margin: 40px auto;
-    width: 394px;
-  }
+    &__heading {
+      text-align: center;
+      margin-bottom: 15px;
+    }
 
-}
+    &__inputs {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+      margin-bottom: 30px;
+      align-items: center;
+    }
 
-.credit-card {
-  margin: auto;
-  padding: 26px 20px;
-  background: #161412;
-  border-radius: 12px;
-  height: 220px;
-  width: 350px;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 14px;
-  color: #FFFFFF;
+    &__input {
+      display: flex;
+      width: calc(100% - 30%);
+      max-width: calc(100% - 40%);
+      gap: 20px;
+      align-items: center;
+      justify-content: center;
+    }
 
-  &__name {
-    margin-bottom: 34px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__logo {
-    background: url('../assets/icons/modal/visa_ico.svg') no-repeat 50% 50%;
-    width: 44px;
-    height: 15px;
-  }
-
-  &__number {
-    margin-bottom: 34px;
-    width: 60%;
-  }
-
-  &__input {
-    border: none;
-    background: rgba(244, 244, 242, 0.5);
-    padding-left: 20px;
-    border-radius: 15px;
-    height: 32px;
-    color: black;
-
-    &::placeholder {
-      color: black;
+    &__btn {
+      margin: auto;
+      max-width: calc(100% - 60%);
     }
   }
 
-  .input-wrapper {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
+  .error-message {
+    @include font($weight: 500);
+    color: $color-error;
   }
-
-  .card__valid {
-    display: flex;
-    width: 48%;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-    font-weight: 400;
-
-    .card__input {
-      width: 86px;
-    }
-  }
-
-  .card__ccv {
-    display: flex;
-    width: 48%;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-    font-weight: 400;
-
-    .card__input {
-      width: 86px;
-    }
-  }
-}
-
-// make it happen
-.modal-active {
-  visibility: visible;
 }
