--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
   background-color: $color-additional;
 
   &__wrapper {
-    padding: 15px 0 30px;
+    padding: 15px 15px 30px;
   }
 
   &__copyright {
