--- a/src/sass/pages/_store.scss
+++ b/src/sass/pages/_store.scss
@@ -28,7 +28,8 @@
 
   .cards {
     flex-wrap: wrap;
-    &_list{
+
+    &_list {
       flex-wrap: nowrap;
       flex-direction: column;
 
@@ -36,8 +37,10 @@
         flex-direction: row;
         height: 100px;
         flex-basis: auto;
+        align-items: center;
       }
-      .card__footer{
+
+      .card__footer {
         flex-basis: 100%;
       }
     }
@@ -52,6 +55,11 @@
       margin-bottom: 10px;
     }
   }
+
+  .form__label {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .stock {
@@ -64,12 +72,8 @@
   &__input {
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
-
-}
-
-.form__label {
-  display: flex;
 }
 
 .form__stock {
@@ -82,5 +86,6 @@
   &__input {
     display: flex;
     flex-direction: column;
+    gap: 5px;
   }
 }
